--- a/src/app/component/products/product-detail/product-detail.component.html
+++ b/src/app/component/products/product-detail/product-detail.component.html
@@ -1,24 +1,28 @@
 <div class="product-detail-top">
     <div class="row align-items-center">
-        <div class="col-md-5">
-            <div class="product-slider-single normal-slider">
-                <img src="assets/style/img/product-1.jpg" alt="Product Image">
-                <img src="assets/style/img/product-3.jpg" alt="Product Image">
-                <img src="assets/style/img/product-5.jpg" alt="Product Image">
-                <img src="assets/style/img/product-7.jpg" alt="Product Image">
-                <img src="assets/style/img/product-9.jpg" alt="Product Image">
-                <img src="assets/style/img/product-10.jpg" alt="Product Image">
-            </div>
-            <div class="product-slider-single-nav normal-slider">
-                <div class="slider-nav-img"><img src="assets/style/img/product-1.jpg" alt="Product Image"></div>
-                <div class="slider-nav-img"><img src="assets/style/img/product-3.jpg" alt="Product Image"></div>
-                <div class="slider-nav-img"><img src="assets/style/img/product-5.jpg" alt="Product Image"></div>
-                <div class="slider-nav-img"><img src="assets/style/img/product-7.jpg" alt="Product Image"></div>
-                <div class="slider-nav-img"><img src="assets/style/img/product-9.jpg" alt="Product Image"></div>
-                <div class="slider-nav-img"><img src="assets/style/img/product-10.jpg" alt="Product Image"></div>
-            </div>
-        </div>
         <div class="col-md-7">
+          <mdb-carousel class="carousel slide carousel-fade" [type]="'carousel-thumbnails'" [animation]="'fade'">
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-1.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-3.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-5.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-7.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-9.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+              <img src="assets/style/img/product-10.jpg" alt="Product Image" class="d-block w-100">
+            </mdb-carousel-item>
+          </mdb-carousel>
+        </div>
+        <div class="col-md-5">
             <div class="product-content">
                 <div class="title"><h2>Product Name</h2></div>
                 <div class="ratting">
@@ -47,7 +51,7 @@
                         <button type="button" class="btn">M</button>
                         <button type="button" class="btn">L</button>
                         <button type="button" class="btn">XL</button>
-                    </div> 
+                    </div>
                 </div>
                 <div class="p-color">
                     <h4>Color:</h4>
@@ -55,7 +59,7 @@
                         <button type="button" class="btn">White</button>
                         <button type="button" class="btn">Black</button>
                         <button type="button" class="btn">Blue</button>
-                    </div> 
+                    </div>
                 </div>
                 <div class="action">
                     <a class="btn" href="#"><i class="fa fa-shopping-cart"></i>Add to Cart</a>
@@ -64,4 +68,35 @@
             </div>
         </div>
     </div>
+  <div class="row product-detail-bottom">
+    <div class="col-lg-12">
+      <ul class="nav nav-pills nav-justified">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="pill" href="#description">Description</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="pill" href="#specification">Specification</a>
+        </li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="description" class="container tab-pane active">
+          <h4>Product description</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In condimentum quam ac mi viverra dictum. In efficitur ipsum diam, at dignissim lorem tempor in. Vivamus tempor hendrerit finibus. Nulla tristique viverra nisl, sit amet bibendum ante suscipit non. Praesent in faucibus tellus, sed gravida lacus. Vivamus eu diam eros. Aliquam et sapien eget arcu rhoncus scelerisque. Suspendisse sit amet neque neque. Praesent suscipit et magna eu iaculis. Donec arcu libero, commodo ac est a, malesuada finibus dolor. Aenean in ex eu velit semper fermentum. In leo dui, aliquet sit amet eleifend sit amet, varius in turpis. Maecenas fermentum ut ligula at consectetur. Nullam et tortor leo.
+          </p>
+        </div>
+        <div id="specification" class="container tab-pane fade">
+          <h4>Product specification</h4>
+          <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
