--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <router-outlet></router-outlet>
   </div>
   <div>
+    <app-brand-slide></app-brand-slide>
+  </div>
+  <div>
     <app-footer></app-footer>
   </div>
 </div>
