--- a/src/app/component/login-register/login-register.component.html
+++ b/src/app/component/login-register/login-register.component.html
@@ -2,7 +2,7 @@
 <div class="login">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6">    
+            <div class="col-lg-6">
                 <div class="register-form">
                     <div class="row">
                         <div class="col-md-6">
@@ -40,20 +40,20 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label>Username</label>
-                            <input class="form-control" type="text" placeholder="E-mail / Username">
+                            <input class="form-control" type="text" placeholder="Username" [(ngModel)]="loginForm.username">
                         </div>
                         <div class="col-md-6">
                             <label>Password</label>
-                            <input class="form-control" type="text" placeholder="Password">
+                            <input class="form-control" type="password" placeholder="Password" [(ngModel)]="loginForm.password">
                         </div>
                         <div class="col-md-12">
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="newaccount">
+                                <input type="checkbox" class="custom-control-input" [(ngModel)]="keepLogin">
                                 <label class="custom-control-label" for="newaccount">Keep me signed in</label>
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <button class="btn">Submit</button>
+                            <button class="btn" (click)="login()">Submit</button>
                         </div>
                     </div>
                 </div>
