--- a/src/app/component/category/category.component.css
+++ b/src/app/component/category/category.component.css
@@ -1,4 +1,10 @@
 .product-image{
-  width: 220px;
-  height: 230px;
+  width:100%;
+  height: 250px;
+}
+.product-image{
+  margin: auto;
+}
+.product-item{
+  margin: 10px;
 }
