--- a/src/app/component/category/category.component.html
+++ b/src/app/component/category/category.component.html
@@ -47,20 +47,16 @@
       <div class="col-md-4" *ngFor="let cate of categoryId">
           <div class="product-item">
               <div class="product-title">
-                  <a href="#">{{cate.name}}</a>
-                  <div class="ratting">
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                      <i class="fa fa-star"></i>
-                  </div>
+                  <a href="" routerLink="{{'detail/'+cate.id}}" >{{cate.name}}</a>
               </div>
               <div class="product-image">
                 <!-- lấy link localhost:/4200/detail/3 -->
-                  <a href="" routerLink="{{'category/'+cate.id}}">
+                <a href="" [routerLink]="['/products/detail/'+cate.id]" routerLinkActive="router-link-active" >
+                  <img src="{{cate.image}}" alt="Product Image">
+                </a>
+                  <!-- <a href="" routerLink="{{'detail/'+cate.id}}">
                       <img src="{{cate.image}}" alt="Product Image">
-                  </a>
+                  </a> -->
               </div>
               <div class="product-price">
                   <h3><span>$</span>{{cate.priceSell}}</h3>
