--- a/src/app/component/products/product-list/product-list.component.html
+++ b/src/app/component/products/product-list/product-list.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="product-price" style="background: rgb(231, 185, 185);">
                     <span style="color: black;"><span>$</span>{{prod.priceSell}}</span>
-                    <button class="btn" (click)="addCart(prod.id)"><i class="fa fa-shopping-cart"></i>AddToCart</button>
+                    <button class="btn" (click)="addCart(prod)"><i class="fa fa-shopping-cart"></i>AddToCart</button>
                 </div>
             </div>
         </div>
