--- a/src/assets/style/css/styles.css
+++ b/src/assets/style/css/styles.css
@@ -616,7 +616,7 @@ progress {
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
     max-width: 720px;
-    background: #000000 !important;
+    background: #ffffff !important;
   }
 }
 @media (min-width: 992px) {
@@ -627,6 +627,7 @@ progress {
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
     max-width: 1140px;
+    margin-bottom: 1200px;
   }
 }
 @media (min-width: 1400px) {
