--- a/src/app/component/admin/header/header.component.html
+++ b/src/app/component/admin/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
   <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+  <a class="navbar-brand ps-3" href="admin">Start Bootstrap</a>
   <!-- Sidebar Toggle-->
   <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
   <!-- Navbar Search-->
@@ -12,14 +12,21 @@
   </form>
   <!-- Navbar-->
   <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown"  *ngIf="!isLogin">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#!">Settings</a></li>
-              <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#!">Logout</a></li>
+              <li><a class="dropdown-item" href="a-login">Đăng Nhập</a></li>
+              <li><a class="dropdown-item" href="a-resigter">Đăng ký</a></li>
           </ul>
       </li>
   </ul>
+
+    <li class="nav-item dropdown"  *ngIf="isLogin">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i>Hello {{name}}</a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="a-resigter">Thông tin tài khoản</a></li>
+            <li><a class="dropdown-item" href="#" (click)="logout()">Đăng Xuất</a></li>
+        </ul>
+    </li>
+
 </nav>
