--- a/src/app/component/admin/menu/menu.component.html
+++ b/src/app/component/admin/menu/menu.component.html
@@ -3,20 +3,22 @@
       <div class="sb-sidenav-menu">
           <div class="nav">
               <div class="sb-sidenav-menu-heading">Core</div>
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="admin">
                   <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                   Dashboard
               </a>
               <div class="sb-sidenav-menu-heading">Interface</div>
               <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                   <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                  Layouts
+                  Manage
                   <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
               </a>
               <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                   <nav class="sb-sidenav-menu-nested nav">
-                      <a class="nav-link" href="layout-static.html">Static Navigation</a>
-                      <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
+                      <a class="nav-link" href="admin/a-brand">Brands</a>
+                      <a class="nav-link" href="admin/a-category">Category</a>
+                      <a class="nav-link" href="admin/a-category">Order</a>
+                      <a class="nav-link" href="admin/a-user">User</a>
                   </nav>
               </div>
               <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -32,9 +34,9 @@
                       </a>
                       <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                           <nav class="sb-sidenav-menu-nested nav">
-                              <a class="nav-link" href="login.html">Login</a>
-                              <a class="nav-link" href="register.html">Register</a>
-                              <a class="nav-link" href="password.html">Forgot Password</a>
+                              <a class="nav-link" href="admin">Login</a>
+                              <a class="nav-link" href="admin">Register</a>
+                              <a class="nav-link" href="admin">Forgot Password</a>
                           </nav>
                       </div>
                       <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
@@ -51,11 +53,11 @@
                   </nav>
               </div>
               <div class="sb-sidenav-menu-heading">Addons</div>
-              <a class="nav-link" href="charts.html">
+              <a class="nav-link" href="admin">
                   <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                   Charts
               </a>
-              <a class="nav-link" href="tables.html">
+              <a class="nav-link" href="admin">
                   <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                   Tables
               </a>
