--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 @import 'assets/style/css/style.css';
 @import 'assets/style/lib/slick/slick.css';
 @import 'assets/style/lib/slick/slick-theme.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
