--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -82,7 +82,7 @@
                 <div class="user">
                     <a href="#" class="btn cart" routerLink="cart" routerLinkActive="active">
                         <i class="fa fa-shopping-cart"></i>
-                        <span class="test">(0)</span>
+                        <span class="test">{{sharedDataService.cart.cartDetails.length}}</span>
                     </a>
                 </div>
             </div>
