--- a/src/app/component/client/checkout/checkout.component.html
+++ b/src/app/component/client/checkout/checkout.component.html
@@ -98,7 +98,6 @@
             <p class="ship-cost">Shipping Cost<span>$1</span></p>
             <h2>Grand Total<span>$100</span></h2>
           </div>
-
           <div class="checkout-payment">
             <div class="payment-methods">
               <h1>Payment Methods</h1>
@@ -159,7 +158,7 @@
               </div>
             </div>
             <div class="checkout-btn">
-              <button>Place Order</button>
+              <button type="submit" (click)="checkout()">Place Order</button>
             </div>
           </div>
         </div>
