--- a/src/app/component/client/home/home.component.html
+++ b/src/app/component/client/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="row">
           <div class="col-md-3">
               <nav class="navbar bg-light">
-                <h2 class="title">CATEGORY</h2>
+                <h2 class="title" style="margin-left: 50px;margin-top: 20px;">Danh Mục Sản Phẩm</h2>
                   <ul class="navbar-nav" *ngFor="let cate of category">
                       <li class="nav-item">
                            <a class="nav-link" href="" [routerLink]="['/products/category/'+cate.id]" routerLinkActive="router-link-active"  ><i></i> {{cate.name}}</a>
@@ -15,7 +15,7 @@
           <div class="col-md-6">
               <div class="header-slider normal-slider">
                   <div class="header-slider-item">
-                      <img src="assets/style/img/slider-1.jpg" alt="Slider Image" />
+                      <img src="assets/style/img/bg3.jpg" alt="Slider Image" style="height: 410px;width: 625px;"/>
                       <div class="header-slider-caption">
                           <p>Phong Cách - Uy Tín &nbsp; Chất Lượng - Thương Hiệu</p>
                           <a class="btn" href="products"><i class="fa fa-shopping-cart"></i>Shop Now</a>
@@ -26,13 +26,13 @@
           <div class="col-md-3">
               <div class="header-img">
                   <div class="img-item">
-                      <img src="assets/style/img/category-1.jpg" />
+                      <img src="assets/style/img/bg1.jpg" />
                       <a class="img-text" href="products">
                         <p>Phong Cách - Uy Tín &nbsp; Chất Lượng - Thương Hiệu</p>
                       </a>
                   </div>
                   <div class="img-item">
-                      <img src="assets/style/img/category-2.jpg" />
+                      <img src="assets/style/img/bg2.jpg" />
                       <a class="img-text" href="products">
                         <p>Phong Cách - Uy Tín &nbsp; Chất Lượng - Thương Hiệu</p>
                         </a>
@@ -91,65 +91,65 @@
 <!--END Thanh Toan- Giao Hang - Quyen Loi-->
 
 <!-- Category Start-->
-<!-- <div class="category">
+  <div class="category">
   <div class="container-fluid">
       <div class="row">
           <div class="col-md-3">
               <div class="category-item ch-400">
-                  <img src="assets/style/img/aogucci.jpg" />
+                  <img src="assets/style/img/1.png" />
                   <a class="category-name"
-                   href="" [routerLink]="['/products/category/11']" routerLinkActive="router-link-active">
-                      <p>Quần áo</p>
+                   href="" [routerLink]="['/products/category/28']" routerLinkActive="router-link-active">
+                      <p>LapTop</p>
                   </a>
               </div>
           </div>
           <div class="col-md-3">
               <div class="category-item ch-250">
-                  <img src="assets/style/img/category-4.jpg" />
+                  <img src="assets/style/img/p6.jpg" />
                   <a class="category-name"
-                  href="" [routerLink]="['/products/category/21']" routerLinkActive="router-link-active">
-                      <p>Mỹ Phẩm</p>
+                  href="" [routerLink]="['/products/category/30']" routerLinkActive="router-link-active">
+                      <p>Tai nghe</p>
                   </a>
               </div>
               <div class="category-item ch-150">
                   <img src="assets/style/img/category-5.jpg" />
-                  <a class="category-name" href=""[routerLink]="['/products/category/9']" routerLinkActive="router-link-active">
+                  <a class="category-name" href=""[routerLink]="['/products/category/33']" routerLinkActive="router-link-active">
                       <p>Phụ kiện</p>
                   </a>
               </div>
           </div>
           <div class="col-md-3">
               <div class="category-item ch-150">
-                  <img src="assets/style/img/jordan.jpg" />
+                  <img src="assets/style/img/12prm.jpg" />
                   <a class="category-name" href=""
-                  [routerLink]="['/products/category/10']" routerLinkActive="router-link-active">
+                  [routerLink]="['/products/category/29']" routerLinkActive="router-link-active">
                   >
-                      <p>Giày dép</p>
+                      <p>Điện thoại</p>
                   </a>
               </div>
               <div class="category-item ch-250">
-                  <img src="assets/style/img/category-7.jpg" />
-                  <a class="category-name" href=""[routerLink]="['/products/category/9']" routerLinkActive="router-link-active">
-                      <p>Phụ kiện</p>
+                  <img src="assets/style/img/bg2.jpg" />
+                  <a class="category-name" href=""[routerLink]="['/products/category/33']" routerLinkActive="router-link-active">
+                      <p>Linh kiện</p>
                   </a>
               </div>
           </div>
           <div class="col-md-3">
               <div class="category-item ch-400">
-                  <img src="assets/style/img/balenao.jpg" />
+                  <img src="assets/style/img/p28.jpg" />
                   <a class="category-name"
-                   href="" [routerLink]="['/products/category/11']" routerLinkActive="router-link-active">
-                      <p>Quần áo</p>
+                   href="" [routerLink]="['/products/category/32']" routerLinkActive="router-link-active">
+                      <p>Loa</p>
                   </a>
               </div>
           </div>
       </div>
   </div>
-</div> -->
+</div>
 <!-- Category End-->
 
 <!-- Call to Action Start -->
-<div class="call-to-action">
+<!-- <div class="call-to-action">
   <div class="container-fluid">
       <div class="row align-items-center">
           <div class="col-md-6">
@@ -160,7 +160,7 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
 <!-- Call to Action End -->
 
 <!-- Sản Phẩm hot -->
