--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,4 +1,5 @@
-  <body class="sb-nav-fixed">
+<div>
+<body class="sb-nav-fixed">
     <app-headeradmin></app-headeradmin>
     <div id="layoutSidenav">
       <app-menuadmin></app-menuadmin>
@@ -7,4 +8,5 @@
         </div>
     </div>
   </body>
+</div>
 
