--- a/src/app/component/admin/form/addbrand/addbrand.component.css
+++ b/src/app/component/admin/form/addbrand/addbrand.component.css
@@ -1,3 +1,9 @@
+.errorMessage {
+  color: red;
+}
+.form-header {
+  width: 80%;
+}
 #customers {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
