--- a/src/app/component/admin/home/brand/brand.component.html
+++ b/src/app/component/admin/home/brand/brand.component.html
@@ -1,118 +1,45 @@
-<style>
-  table,
-  th,
-  tr,
-  td {
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
-  th,
-  tr,
-  td {
-    padding: 5px;
-    text-align: left;
-  }
-</style>
 
-<!-- ------- -->
+<div style="margin-bottom: 300px">
+  <h1 class="mt-4">Quản lý hãng sản xuất</h1>
+      <button style="margin-left: 14px;height: 50px;margin-bottom:20px ;" (click)="addBrand()">Thêm hãng sản xuất</button>
+  <table id="customers" style="border-collapse: collapse">
+    <tr>
+      <th>EDIT</th>
+      <th>
+        Id
+      </th>
+      <th>Code</th>
+      <th>Name
+        <mat-icon style="cursor: pointer" (click)="sortByCode('down')" >
+          arrow_downward
+        </mat-icon>
+        <mat-icon style="cursor: pointer" (click)="sortByCode('up')" >
+          arrow_upward
+        </mat-icon>
+      </th>
+    </tr>
+    <tr *ngFor="let item of sharedDataService.productList">
+      <td>
+        <mat-icon
+          style="cursor: pointer;"
+          title="Nhấn vào để soạn"
+          (click)="deletebrand(item.id)"
+        >
+          clear
+        </mat-icon>
+        &nbsp;
+        <mat-icon
+          style="cursor: pointer"
+          title="Nhấn vào để soạn"
+          (click)="editBrand(item.id)"
+        >
+          create
+        </mat-icon>
+      </td>
+      <td>{{ item?.id }}</td>
+      <td>{{ item?.code }}</td>
+      <td>{{ item?.name }}</td>
+    </tr>
+  </table>
 
-<div class="row"></div>
-<div class="container" style="background: #f3f3f3 !important">
-  <div class="row">
-    <div class="col-sm">
-      <main>
-        <div class="container-fluid px-4">
-          <h1 class="mt-4">Brands</h1>
-          <div class="card mb-4">
-            <div class="card-body">
-              DataTables is a third party plugin that is used to generate the
-              demo table below. For more information about DataTables, please
-              visit the official DataTables documentation
-            </div>
-          </div>
-          <div class="card mb-4">
-            <div class="card-header">
-              <i class="fas fa-table me-1"></i>
-              DataTable Example
-            </div>
-            <div class="card-body">
-              <table id="datatablesSimple">
-                <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Tên nhà sản xuất</th>
-                    <th>Mã Code</th>
-                    <th>Edit</th>
-                    <th>Xóa</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr
-                    *ngFor="
-                      let b of sharedDataService.productList
-                        | paginate: { itemsPerPage: 6, currentPage: p }
-                    "
-                  >
-                    <td>{{ b.id }}</td>
-                    <td>{{ b.name }}</td>
-                    <td>{{ b.code }}</td>
-
-                    <td><button (click)="editBrand(b.id)">Sửa</button></td>
-                    <td><button (click)="deletebrand(b.id)">Xóa</button></td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="col-md-12" style="padding-top: 20px">
-                <pagination-controls
-                  (pageChange)="p = $event"
-                ></pagination-controls>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-    </div>
-    <div class="col-sm-4">
-      <h1 style="color: crimson;">Add Brands</h1>
-      <div class="addproductnew">
-        <div class="container-fluid">
-          <div class="row">
-            <div>
-              <div class="product-form">
-                <div class="row">
-                  <div class="col-md-12">
-                    <label>Tên sản phẩm</label>
-                    <input
-                      class="form-control"
-                      type="text"
-                      placeholder="tên sản phẩm"
-                      [(ngModel)]="brandForm.name"
-                    />
-                  </div>
-                  <div class="col-md-12">
-                    <label>Code</label>
-                    <input
-                      class="form-control"
-                      type="text"
-                      placeholder="mã sản phẩm"
-                      [(ngModel)]="brandForm.code"
-                    />
-                  </div>
-                  <div class="col-md-6">
-                    <button
-                      class="btn btn-primary"
-                      style="width: 140px; height: 40px"
-                      (click)="save()"
-                    >
-                      Add Brands
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
