--- a/src/app/component/client/cart/cart.component.html
+++ b/src/app/component/client/cart/cart.component.html
@@ -7,34 +7,42 @@
           <div class="table-responsive">
             <table class="table table-bordered">
               <thead class="thead-dark">
-              <tr>
-                <th>Tên sản phẩm</th>
-                <th>Giá Tiền</th>
-                <th>Số Lượng</th>
-                <th>Tổng Tiền</th>
-                <th>Xóa</th>
-              </tr>
+                <tr>
+                  <th>Tên sản phẩm</th>
+                  <th>Giá Tiền</th>
+                  <th>Số Lượng</th>
+                  <th>Tổng Tiền</th>
+                  <th>Xóa</th>
+                </tr>
               </thead>
               <tbody class="align-middle">
-              <tr>
-                <td>
-                  <div class="img">
-                    <a href="#"><img src="assets/style/img/product-1.jpg" alt="Image"></a>
-                    <p>Product Name</p>
-                  </div>
-                </td>
-                <td>$99</td>
-                <td>
-                  <div class="qty">
-                    <button class="btn-minus" (click)="giamsl()"><i class="fa fa-minus"></i></button>
-                    <input type="text" value={{soluong}}>
-                    <button class="btn-plus"(click)="tangsl()"><i class="fa fa-plus"></i></button>
-                  </div>
-                </td>
-                <td>{{soluong* priceSell}}</td>
-                <td><button><i class="fa fa-trash"></i></button></td>
-              </tr>
+                <tr *ngFor="let item of sharedDataService.cart.cartDetaills">
+                  <td>
+                    <div class="img">
+                      <a href="#"
+                        ><img src="{{ item.productInfoProductImage }}" alt="Image"
+                      /></a>
+                      <p>{{ item.productName }}</p>
+                    </div>
+                  </td>
+                  <!-- giá bán -->
+                  <td>{{ item.productInfoProductPriceSell }}</td>
+                  <!-- số lượng -->
+                  <td>{{ item.numberPro }}</td>
+                  <!-- tổng tiền của 1 sản phẩm-->
+                  <td >
+                    {{item.productInfoProductPriceSell * item.numberPro}}
+                  </td>
 
+                  <td>
+                    <button (click)="DeleteProduct(item.id)"><i class="fa fa-trash"></i></button>
+                  </td>
+                </tr>
+                <!-- <tr>
+                  <td ng-im></td>
+                  <td>Total :</td>
+                  <td>{{ controller.Total }}</td>
+              </tr> -->
               </tbody>
             </table>
           </div>
@@ -45,7 +53,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="coupon">
-                <input type="text" placeholder="Coupon Code">
+                <input type="text" placeholder="Coupon Code" />
                 <button>Apply Code</button>
               </div>
             </div>
@@ -53,13 +61,18 @@
               <div class="cart-summary">
                 <div class="cart-content">
                   <h1>Cart Summary</h1>
-                  <p>Sub Total<span>$99</span></p>
-                  <p>Shipping Cost<span>$1</span></p>
-                  <h2>Grand Total<span>$100</span></h2>
+                  <p>Sub Total<span>{{total}}</span></p>
+                  <p>Shipping Cost<span>${{shippingCost}}</span></p>
+                  <h2>Grand Total<span>${{(total + shippingCost)}}</span></h2>
                 </div>
                 <div class="cart-btn">
                   <button>Update Cart</button>
-                  <button [routerLink]="['/checkout']" routerLinkActive="router-link-active" >Checkout</button>
+                  <button
+                    [routerLink]="['/checkout']"
+                    routerLinkActive="router-link-active"
+                  >
+                    Checkout
+                  </button>
                 </div>
               </div>
             </div>
