--- a/src/app/component/client/checkout/checkout.component.html
+++ b/src/app/component/client/checkout/checkout.component.html
@@ -9,34 +9,43 @@
             <div class="row">
               <div class="col-md-6">
                 <label>First Name</label>
-                <input class="form-control" type="text" placeholder="First Name">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="First Name"
+                />
               </div>
               <div class="col-md-6">
-                <label>Last Name"</label>
-                <input class="form-control" type="text" placeholder="Last Name">
+                <label>Last Name</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Last Name"
+                />
               </div>
               <div class="col-md-6">
                 <label>E-mail</label>
-                <input class="form-control" type="text" placeholder="E-mail">
+                <input class="form-control" type="text" placeholder="E-mail" />
               </div>
               <div class="col-md-6">
                 <label>Mobile No</label>
-                <input class="form-control" type="text" placeholder="Mobile No">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Mobile No"
+                />
               </div>
               <div class="col-md-12">
                 <label>Address</label>
-                <input class="form-control" type="text" placeholder="Address">
-              </div>
-              <div class="col-md-6">
-                <label>Hình thức thanh toán</label>
-                <select class="custom-select">
-                  <option selected>Thanh toán trực tiếp</option>
-                  <option>Thanh toán trực tuyến</option>
-                  <option>Thanh toán sau khi nhận hàng</option>
-                </select>
+                <input class="form-control" type="text" placeholder="Address" />
               </div>
               <div class="col-md-12">
-                <button type="submit" style="background-color: green; color: wheat;width: 190px;">Submit</button>
+                <button
+                  type="submit"
+                  style="background-color: green; color: wheat; width: 190px"
+                >
+                  Đặt hàng
+                </button>
               </div>
             </div>
           </div>
@@ -46,23 +55,35 @@
             <div class="row">
               <div class="col-md-6">
                 <label>First Name</label>
-                <input class="form-control" type="text" placeholder="First Name">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="First Name"
+                />
               </div>
               <div class="col-md-6">
-                <label>Last Name"</label>
-                <input class="form-control" type="text" placeholder="Last Name">
+                <label>Last Name</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Last Name"
+                />
               </div>
               <div class="col-md-6">
                 <label>E-mail</label>
-                <input class="form-control" type="text" placeholder="E-mail">
+                <input class="form-control" type="text" placeholder="E-mail" />
               </div>
               <div class="col-md-6">
                 <label>Mobile No</label>
-                <input class="form-control" type="text" placeholder="Mobile No">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="Mobile No"
+                />
               </div>
               <div class="col-md-12">
                 <label>Address</label>
-                <input class="form-control" type="text" placeholder="Address">
+                <input class="form-control" type="text" placeholder="Address" />
               </div>
               <div class="col-md-6">
                 <label>Country</label>
@@ -75,15 +96,19 @@
               </div>
               <div class="col-md-6">
                 <label>City</label>
-                <input class="form-control" type="text" placeholder="City">
+                <input class="form-control" type="text" placeholder="City" />
               </div>
               <div class="col-md-6">
                 <label>State</label>
-                <input class="form-control" type="text" placeholder="State">
+                <input class="form-control" type="text" placeholder="State" />
               </div>
               <div class="col-md-6">
                 <label>ZIP Code</label>
-                <input class="form-control" type="text" placeholder="ZIP Code">
+                <input
+                  class="form-control"
+                  type="text"
+                  placeholder="ZIP Code"
+                />
               </div>
             </div>
           </div>
@@ -93,72 +118,11 @@
         <div class="checkout-inner">
           <div class="checkout-summary">
             <h1>Cart Total</h1>
-            <p>Product Name<span>$99</span></p>
-            <p class="sub-total">Sub Total<span>$99</span></p>
-            <p class="ship-cost">Shipping Cost<span>$1</span></p>
-            <h2>Grand Total<span>$100</span></h2>
-          </div>
-          <div class="checkout-payment">
-            <div class="payment-methods">
-              <h1>Payment Methods</h1>
-              <div class="payment-method">
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="payment-1" name="payment">
-                  <label class="custom-control-label" for="payment-1">Paypal</label>
-                </div>
-                <div class="payment-content" id="payment-1-show">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt orci ac eros volutpat maximus lacinia quis diam.
-                  </p>
-                </div>
-              </div>
-              <div class="payment-method">
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="payment-2" name="payment">
-                  <label class="custom-control-label" for="payment-2">Payoneer</label>
-                </div>
-                <div class="payment-content" id="payment-2-show">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt orci ac eros volutpat maximus lacinia quis diam.
-                  </p>
-                </div>
-              </div>
-              <div class="payment-method">
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="payment-3" name="payment">
-                  <label class="custom-control-label" for="payment-3">Check Payment</label>
-                </div>
-                <div class="payment-content" id="payment-3-show">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt orci ac eros volutpat maximus lacinia quis diam.
-                  </p>
-                </div>
-              </div>
-              <div class="payment-method">
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="payment-4" name="payment">
-                  <label class="custom-control-label" for="payment-4">Direct Bank Transfer</label>
-                </div>
-                <div class="payment-content" id="payment-4-show">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt orci ac eros volutpat maximus lacinia quis diam.
-                  </p>
-                </div>
-              </div>
-              <div class="payment-method">
-                <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="payment-5" name="payment">
-                  <label class="custom-control-label" for="payment-5">Cash on Delivery</label>
-                </div>
-                <div class="payment-content" id="payment-5-show">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt orci ac eros volutpat maximus lacinia quis diam.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="checkout-btn">
-              <button type="submit" (click)="checkout()">Place Order</button>
+            <p>Sub Total<span>{{total}}</span></p>
+            <p>Shipping Cost<span>${{shippingCost}}</span></p>
+            <h2>Grand Total<span>${{(total + shippingCost)}}</span></h2>
+            <div>
+              <button type="submit" (click)="checkout()">Thanh toán trực tuyến</button>
             </div>
           </div>
         </div>
@@ -166,4 +130,3 @@
     </div>
   </div>
 </div>
-<!-- Checkout End -->
