--- a/src/app/component/products/product-detail/product-detail.component.html
+++ b/src/app/component/products/product-detail/product-detail.component.html
@@ -30,16 +30,19 @@
                         <button class="btn-plus"  (click)="changeQuantity(1)"><i class="fa fa-plus"></i></button>
                     </div>
                 </div>
-                <div class="p-color">
+                <div class="p-color" *ngIf="productId.coloList && productId.coloList.length > 0">
                     <h4>Color:</h4>
                     <div class="btn-group btn-group-sm">
-                        <button type="button" class="btn" *ngFor="let color of productId.coloList">{{color.code}}</button>
-
+                        <button type="button" class="btn" *ngFor="let color of productId.coloList"
+                          (click)="chooseColor(color.productInfoId)">{{color.code}}
+                        </button>
                     </div>
                 </div>
+                <div *ngIf="!productId.coloList || productId.coloList.length == 0">
+                  Sold out
+                </div>
                 <div class="action">
-                    <a class="btn" href="#"><i class="fa fa-shopping-cart" (click)="addCart()"></i>Add to Cart</a>
-                    <a class="btn" href="#"><i class="fa fa-shopping-bag" (click)="buyNow()"></i>Buy Now</a>
+                    <button class="btn" (click)="addCart()" *ngIf="isChooseColor"><i class="fa fa-shopping-cart"></i>Add to Cart</button>
                 </div>
             </div>
         </div>
