--- a/src/app/component/brands/brands.component.html
+++ b/src/app/component/brands/brands.component.html
@@ -60,7 +60,7 @@
               </div>
               <div class="product-price" style="background: rgb(231, 185, 185);">
                   <h3><span>$</span>{{brands.priceSell}}</h3>
-                  <button class="btn" (click)="addCart()"><i class="fa fa-shopping-cart"></i>Buy Now</button>
+                  <button class="btn" (click)="addCart(brands)"><i class="fa fa-shopping-cart"></i>Buy Now</button>
               </div>
           </div>
       </div>
