--- a/src/app/component/client/order/order.component.html
+++ b/src/app/component/client/order/order.component.html
@@ -7,38 +7,36 @@
           <div class="table-responsive">
             <table class="table table-bordered">
               <tr >
-                <th>Id</th>
-                <th>Ngày Tạo</th>
                 <th>Mã Đơn Hàng</th>
-                <th>Ngày giao</th>
                 <th>Địa chỉ giao hàng</th>
                 <th>Số điện thoại</th>
+                <th>Trạng thái</th>
                 <th>Số Lượng </th>
                 <th>Tổng Tiền</th>
               </tr>
               <tr *ngFor="let oder of dataOder">
-                <td>{{oder.id}}</td>
-                <td>{{oder.createdDate|date: "dd-MM-yyyy"}}</td>
-                <td><a href="#"data-toggle="modal" data-target="#myModal">{{oder.code}} </a></td>
+                <td><a href="#" data-toggle="modal" data-target="#myModal" (click)="getDetailByCode(oder.code)">{{oder.code}} </a></td>
                   <div id="myModal"  class="modal fade" tabindex="-1" role="dialog">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header" >
-                        <h4 class="modal-title">Chi Tiết Đơn Hàng &nbsp;{{dataOder.code}}</h4>
+                        <h4 class="modal-title">Chi Tiết Đơn Hàng &nbsp;{{oder.code}}</h4>
                       </div>
                       <div class="modal-body">
                         <table style="width:100%">
                           <tr>
-                            <th>Id</th>
-                            <th>Ngày tạo</th>
-                            <th>Số lượng sản phẩm</th>
                             <th>Tên sản phẩm</th>
+                            <th>Giá tiền</th>
+                            <th>số lượng</th>
+                            <th>Màu sản phẩm</th>
+                            <th>Tổng tiền</th>
                           </tr>
-                          <tr *ngFor="let item of dataOder">
-                            <td>{{item.id}}</td>
-                            <td>{{item.deliveryDate |date: "dd-MM-yyyy"}}</td>
+                          <tr *ngFor="let item of dataDetail">
+                            <td>{{item.productInfoProductName}}</td>
+                            <td>{{item.productInfoProductPriceSell}}</td>
                             <td>{{item.numberProduct}}</td>
-                            <td>{{item.productTypeName}}</td>
+                            <td>{{item.productInfoColorName}}</td>
+                            <td>{{item.numberProduct *item.productInfoProductPriceSell}}</td>
                           </tr>
                         </table>
                       </div>
@@ -48,9 +46,9 @@
                     </div><!-- /.modal-content -->
                   </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
-                <td>{{oder.deliveryDate | date: "dd-MM-yyyy"}}</td>
                 <td>{{oder.deliveryAddress}}</td>
                 <td>{{oder.phoneNumber}}</td>
+                <td>{{oder.statusString}}</td>
                 <td>{{oder.numberProduct}}</td>
                 <td>{{oder.totalResult}}</td>
                 </tr>
