--- a/src/app/component/products/product-detail/product-detail.component.html
+++ b/src/app/component/products/product-detail/product-detail.component.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div *ngIf="!productId.coloList || productId.coloList.length == 0">
-                  Sold out
+                  <h1 style="color: red;"> HẾT HÀNG!!! </h1>
                 </div>
                 <div class="action">
                     <button class="btn" (click)="addCart()" *ngIf="isChooseColor"><i class="fa fa-shopping-cart"></i>Add to Cart</button>
