--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -66,7 +66,7 @@
             class="nav-item nav-link"
             routerLink="admin"
             routerLinkActive="active"
-            *ngIf="isAdmin"
+            *ngIf="isAdmin == 'true'"
             >Dashboard</a
           >
           <a
